<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.project.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_gallery_to_detailAgentFragment"
            app:destination="@id/detailAgentFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.project.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.project.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_nav_home"
            app:destination="@id/nav_home"
            app:popUpTo="@id/nav_home"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.project.ui.login.RegisterFragment"
        tools:layout="@layout/fragment_register"
        android:label="RegisterFragment" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.project.ui.maps.MapFragment"
        tools:layout="@layout/fragment_map"
        android:label="MapFragment" />

    <fragment
        android:id="@+id/sprayFragment"
        android:name="com.example.project.ui.spray.SprayFragment"
        tools:layout="@layout/fragment_spray"
        android:label="SprayFragment" />
    <fragment
        android:id="@+id/detailAgentFragment"
        android:name="com.example.project.ui.detailagent.DetailAgentFragment"
        android:label="DetailAgentFragment"
        tools:layout="@layout/detail_agent"/>
    <fragment
        android:id="@+id/rankFragment"
        android:name="com.example.project.ui.ranks.RankFragment"
        android:label="fragment_rank"
        tools:layout="@layout/fragment_rank" />
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.example.project.ui.favorites.FavoriteFragment"
        android:label="FavoriteFragment"
        tools:layout="@layout/fragment_favorite"/>
</navigation>